--- a/views/product-detail.pug
+++ b/views/product-detail.pug
@@ -2,3 +2,10 @@ extends layout
 
 block content
     h1 product details page
+    p #{product.title}
+    p #{product.seller}
+    p #{product.description}
+    p #{product.price}
+    p #{product.condition}
+    p #{product.location}
+    p #{product.contact}
