cretae product and add to MongoDB

--- a/views/products.pug
+++ b/views/products.pug
@@ -5,8 +5,9 @@ block content
     h1(style="font-size:40px") MarketPlace
     .nav-item
       i.bi-shop(class="icon")     Browse all
-    .nav-item
-      i.bi-cart(class="icon")   Sell Product
+    a.sell-product(href="http://localhost:3000/create")
+      .nav-item
+        i.bi-cart(class="icon")   Sell Product
     .nav-item
       i.bi-basket3(class="icon")   Edit Product
     .nav-item
