--- a/views/products.pug
+++ b/views/products.pug
@@ -48,6 +48,8 @@ block content
             p CA $#{product.price}
             p #{product.title || 'N/A'}
             p #{product.location || 'N/A'}
+            p #{product.status}
+
 
   //- JavaScript to get the current location
   script.
