--- a/public/stylesheets/product-edit.css
+++ b/public/stylesheets/product-edit.css
@@ -1,5 +1,6 @@
 /* Container styling */
-.edit-container {
+.edit-container,
+.main-container {
     max-width: 500px;
     margin: 50px auto;
     padding: 20px;
@@ -7,6 +8,11 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
+  }
+  
+  .password-text {
+    color: blue;
+    text-decoration: underline;
   }
   
   /* Title styling */
@@ -43,6 +49,24 @@
     margin-top: 5px;
   }
   
+  .delete-button {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    color: white;
+    background-color: #ff0808;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  /* Button hover effect */
+  .delete-button:hover {
+    background-color: #c40404;
+  }
+  
+
   /* Button styling */
   .edit-button {
     width: 100%;
